--- a/zuzi/style.css
+++ b/zuzi/style.css
@@ -1228,6 +1228,7 @@ body{
 	/*background-image: url("images/bg_boykisser.gif");*/
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-color: #b0d2ee;
     /*background-color:lightcoral;*/
     /*background-color:crimson;*/
 }
